# AlgoHub_local

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: add_algorithm.yaml  bug_repport.yaml
.github/workflows/: PR-review-bot.yml  auto-fill-algo-name.yaml  auto-fill-bug-title.yaml  code-tester.yaml  code-tester.yml  file-structur-check.yaml  issue-Automatic-renaming.yaml  issue-renaming.yaml
docs/: CONTRIBUTING.md
docs/templates/: README_Template.md
src/: __init__.py
src/datastructures/: __init__.py
src/datastructures/stack/: README.md  __init__.py  stack.py
src/search/: __init__.py
src/search/binary_search/: README.md  __init__.py  binary_search.py
src/search/linear_search/: README.md  __init__.py  linear_search.py
src/sorting/: __init__.py
src/sorting/bubble_sort/: README.md  __init__.py  bubble_sort.py
src/sorting/insertion_sort/: README.md  __init__.py  insertion_sort.py
src/sorting/merge_sort/: README.md  __init__.py  merge_sort.py
tests/datastructures/stack/: test_stack.py
tests/search/binary_search/: __init__.py  test_binary_search.py
tests/search/linear_search/: __init__.py  test_linear_search.py
tests/sorting/: __init__.py
tests/sorting/bubble_sort/: __init__.py  test_bubble_sort.py
tests/sorting/insertion_sort/: __init__.py  test_insertion_sort.py
tests/sorting/merge_sort/: __init__.py  test_merge_sort.py
